src/test/deca/context/invalid/provided/invalid_modulo_by_float.deca
// Description:
//    Modulo par un float.
//
// Resultats:
//    invalid_modulo_by_float.deca:14:8: Type mismatch:both operands must be of type int
//
// Historique:
//    cree le 12/01/2025
{
int a = 10;
float b = 2.5;

// Doit etre refuse.
int c = a % b;
}
